# ag-ui

./: .gitattributes  .gitignore  .npmrc  README.md  jitpack.yml  lefthook.yml  nx.json  package.json  pnpm-lock.yaml  render.yaml  turbo.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: auto-approve-community.yml  build-python-preview.yml  canary.yml  dojo-e2e.yml  lint-release-workflows.yml  pr-check-binaries.yml  prepare-release.yml  prerelease.yml  publish-commit.yml  publish-java-sdk.yml  publish-kotlin-sdk.yml  publish-python-package.yml  publish-python-preview.yml  publish-release.yml  release-python.yml  release-typescript.yml  rust-lint-test.yml  security-fork-pr-alert.yml  test-release-scripts.yml  unit-dart-sdk.yml  unit-dotnet-sdk.yml  unit-genkit-go.yml  unit-go-sdk.yml  unit-java-sdk.yml  unit-kotlin-sdk.yml  unit-python-sdk.yml  unit-ruby-sdk.yml  unit-typescript-sdk.yml  zizmor.yml
apps/client-cli-example/: package.json
apps/client-cli-example/src/: agent.ts
apps/dojo/: .gitignore  README.md  next.config.ts  package.json
apps/dojo/e2e/: a2ui-adk-fixtures.ts  aimock-setup.ts  llmock-setup.ts  (+5 more)
docs/: docs.json  integrations.mdx  introduction.mdx  style.css  talk-to-us.mdx
docs/concepts/: capabilities.mdx  events.mdx  interrupts.mdx  messages.mdx  reasoning.mdx
docs/drafts/: agent-capabilities.mdx  interrupts.mdx  multimodal-messages.mdx  overview.mdx  reasoning.mdx
docs/plans/: 2026-06-08-oss-248-a2ui-guidelines-design.md
docs/quickstart/: server.mdx
integrations/adk-middleware/python/: CHANGELOG.md  CONFIGURATION.md  README.md  TOOLS.md  USAGE.md  pyproject.toml
integrations/adk-middleware/python/examples/: pyproject.toml
integrations/adk-middleware/python/examples/server/: __init__.py
integrations/adk-middleware/python/examples/server/api/: __init__.py  a2ui_dynamic_schema.py  a2ui_fixed_schema.py  a2ui_recovery.py  agentic_chat.py  agentic_generative_ui.py  backend_tool_rendering.py  human_in_the_loop.py  predictive_state_updates.py
integrations/adk-middleware/python/src/ag_ui_adk/: __init__.py  a2ui_tool.py  adk_agent.py  client_proxy_tool.py  client_proxy_toolset.py  endpoint.py  event_translator.py  request_state_service.py  session_manager.py
integrations/adk-middleware/python/src/ag_ui_adk/utils/: converters.py
integrations/adk-middleware/python/tests/: server_setup.py  test_a2ui_google_sdk.py  test_a2ui_tool.py  test_adk_130_invocation_id_override.py  test_adk_agent.py  test_client_proxy_tool.py  test_client_proxy_toolset.py  test_context_handling.py  test_duplicate_function_response.py  test_endpoint.py  test_endpoint_agent_resolver.py  test_endpoint_error_handling.py  test_event_translator_comprehensive.py  test_from_app_integration.py  test_hitl_resumption_text_output.py  test_issue_1839_llmagent_hitl_confirmation.py  test_issue_437_skip_summarization_integration.py  test_llmagent_hitl_confirmation.py  test_lro_filtering.py  test_lro_sse_id_remap.py  test_lro_sse_persistence.py  test_lro_tool_response_persistence.py  test_message_history.py  test_multi_instance_hitl.py  test_multi_lro_resume_gating.py  test_multimodal_e2e.py  test_resumability_config.py  test_sequential_agent_hitl_resumption.py  test_session_memory.py  test_temp_state_extraction.py  test_thought_to_thinking_integration.py  test_tool_result_flow.py  test_tool_tracking_hitl.py  test_use_thread_id_as_session_id.py  test_utils_converters.py  test_vertex_session_service.py
integrations/aws-strands/: ARCHITECTURE.md
integrations/crew-ai/python/: README.md  pyproject.toml
integrations/crew-ai/python/ag_ui_crewai/: crews.py  endpoint.py
integrations/crew-ai/python/tests/: conftest.py  test_llm_timeout.py  test_task_cancellation.py
integrations/langgraph/python/: README.md  pyproject.toml
integrations/langgraph/python/ag_ui_langgraph/: __init__.py  a2ui_tool.py  agent.py  interrupts.py  types.py  utils.py
integrations/langgraph/python/ag_ui_langgraph/middlewares/: state_streaming.py
integrations/langgraph/python/examples/: langgraph.json  pyproject.toml
integrations/langgraph/python/examples/agents/: dojo.py
integrations/langgraph/python/examples/agents/a2ui_chat/: agent.py  prompt.py
integrations/langgraph/python/examples/agents/a2ui_dynamic_schema/: agent.py
integrations/langgraph/python/examples/agents/agentic_chat/: agent.py
integrations/langgraph/python/examples/agents/agentic_generative_ui/: agent.py
integrations/langgraph/python/examples/agents/subgraphs/: agent.py
integrations/langgraph/python/tests/: _helpers.py  test_a2ui_tool.py  test_clone.py  test_cr_defensive_fallbacks.py  test_deprecation_warnings.py  test_get_checkpoint_before_message.py  test_get_schema_keys.py  test_interrupt_handling.py  test_make_json_safe.py  test_message_conversion.py  test_messages_snapshot_filtering.py  test_multimodal.py  test_oss28_sse_drop_recovery.py  test_prepare_stream_interrupt_resume.py  test_raw_event_optout.py  test_raw_event_payload_size.py  test_reasoning_canonical_id.py  test_reasoning_content.py  test_resume_input.py  test_stable_message_id.py  test_state_streaming_middleware.py  test_subclass_hooks.py  test_subgraph_streaming.py
middlewares/a2a-middleware/: .npmignore  package.json
middlewares/a2ui-middleware/: package.json
middlewares/event-throttle-middleware/: package.json
middlewares/mcp-apps-middleware/: package.json
middlewares/middleware-starter/: .npmignore  package.json
middlewares/notification-throttle-middleware/: package.json
scripts/: check-codeowners-auth.ts
scripts/release/: build-release-notification.test.ts  create-or-update-release.sh  detect-dotnet-version-changes.sh  detect-py-version-changes.sh  detect-ts-version-changes.sh  generate-ai-release-notes.ts  generate-release-notes.ts  prepare-release.test.ts  python-packages.json  release.config.json  verify-release-scope-dropdowns.sh
sdks/dotnet/: .gitignore  AGENTS.md  AGUI.slnx  Directory.Build.props  Directory.Packages.props
sdks/python/: pyproject.toml
skills/ag-ui-a2ui-integration/: SKILL.md  sources.md
(+551 files in other folders)
