[project]
name = "ag_ui_adk"
description = "ADK Middleware for AG-UI Protocol"
version = "0.6.5"
readme = "README.md"
authors = [
    { name = "Mark Fogle", email = "mark@contextable.com" }
]
requires-python = ">=3.10, <3.15"
dependencies = [
    "ag-ui-protocol>=0.1.15",
    # A2UI recovery/error-handling loop (OSS-158) — framework-agnostic validator +
    # validate→retry loop shared with the LangGraph adapter and the a2ui-middleware
    # paint gate. 0.0.3 carries the A2UIToolParams/guidelines API (OSS-248); published
    # on PyPI, so no local source bridge is needed.
    "ag-ui-a2ui-toolkit>=0.0.3",
    # Google's A2UI Agent SDK (OSS-158): we reuse the two parts that are independent
    # of its strict validator and safe to use with the client-supplied catalog as-is —
    # catalog/prompt rendering (A2uiSchemaManager + catalog.render_as_llm_instructions,
    # which bundles the common-types DEFINITIONS the injected catalog only references)
    # and JSON healing (parse_and_fix). The strict A2uiValidator is NOT used:
    # client-injected (zod-extracted) catalogs aren't strict-resolvable and a separate
    # server catalog drifts, so validation stays with ag-ui-a2ui-toolkit (parity with
    # the LangGraph A2UI demos); catalog conformance is a separate upstream item.
    # We import ONLY the A2A-free subset (a2ui.schema / a2ui.parser / a2ui.basic_catalog);
    # a2ui's top-level __init__ imports only .version and those subpackages import no
    # `a2a` (enforced by tests/test_a2ui_import_hygiene.py), so we add NO a2a-sdk pin.
    # a2ui-agent-sdk only requires google-adk>=1.28.1 + google-genai>=1.27.0, both on
    # the 1.x line. To avoid uv pulling google-adk 2.x (which forces google-genai>=2.4
    # and an aiohttp>=3.14 floor for genai 2.8's readline(max_line_length=) call), we
    # pin resolution to google-adk <2.0 via [tool.uv].constraint-dependencies below —
    # a MINOR adk bump (1.26→1.x-latest), genai stays 1.x. The published google-adk
    # range still allows 2.x for consumers.
    "a2ui-agent-sdk>=0.2.4,<0.3.0",
    "aiohttp>=3.12.0",
    "asyncio>=3.4.3",
    "fastapi>=0.115.2",
    # Compatible with both google-adk 1.x and 2.x.
    # ADK 2.0 (GA 2026-05-19) preserves the public surface this middleware touches:
    #   - Runner.__init__ signature (adds optional `node`/`auto_create_session`; existing kwargs unchanged)
    #   - Runner._resolve_invocation_id (same signature; still used for the #1534 workaround)
    #   - Session/Event additive only (Event gains node_info, output; we read defensively)
    #   - BasePlugin lifecycle hooks (all 12 preserved verbatim)
    #   - LlmAgent / SequentialAgent / LoopAgent unchanged; Workflow is NEW (detected via topology check)
    # 2.0-specific behavior differences handled in source:
    #   - ag-ui#1389: AGUIToolset now binds to ClientProxyToolset (delegation pattern)
    #                 instead of being replaced wholesale, so ADK 2.0's eager Runner-time
    #                 get_tools() cache stays valid after the placeholder is bound.
    #   - ag-ui#1669: Workflow roots receive FunctionResponse directly in new_message
    #                 (the #1534 pre-append workaround now only applies to LlmAgent roots,
    #                 because Workflow._run_impl rehydrates from new_message.parts only).
    # NodeInterruptedError (2.0-only) is a BaseException subclass, NOT an Exception, so
    # existing `except Exception:` blocks correctly let HITL interruption propagate.
    "google-adk>=1.16.0,<3.0.0",
    "pydantic>=2.11.7",
    # Primary SSE response implementation. Used unconditionally so the FastAPI
    # floor stays at >=0.115.2 (rather than the >=0.135.0 jump that would be
    # required to use fastapi.sse.EventSourceResponse). sse-starlette's
    # EventSourceResponse is self-contained -- it ships its own 15 s keep-alive
    # ping plus Cache-Control: no-cache / X-Accel-Buffering: no headers when
    # constructed directly, which lets the endpoint dynamically branch on the
    # request's Accept header (fastapi.sse is a marker class that only applies
    # SSE encoding via response_class= on generator path operations).
    "sse-starlette>=2.1.0",
    "uvicorn>=0.35.0",
]
license = "MIT"

[tool.ag-ui.scripts]
test = "python -m pytest"

# Resolution-only constraint (dev/CI; NOT part of the published wheel metadata, so
# consumers' own resolution is unaffected and the `google-adk>=1.16.0,<3.0.0` range
# above still permits 2.x). Pins our lock to google-adk 1.x so adding a2ui-agent-sdk
# (floor >=1.28.1) is a minor bump rather than a jump to adk 2.x — which would pull
# google-genai>=2.4 and an aiohttp>=3.14 floor with it. See the a2ui-agent-sdk note
# in [project].dependencies.
[tool.uv]
constraint-dependencies = ["google-adk<2.0"]

[build-system]
requires = ["uv_build>=0.8.0,<0.11"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/ag-ui-protocol/ag-ui/tree/main/integrations/adk-middleware/python"
Issues = "https://github.com/ag-ui-protocol/ag-ui/issues"


[dependency-groups]
dev = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "pluggy>=1.6.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.8.0",
    # SQLAlchemy's async engine (used by ADK's ``DatabaseSessionService`` in
    # several test fixtures) requires greenlet. ``google-adk[db]`` 2.0 pulls
    # aiosqlite but not greenlet, so we declare it explicitly here.
    "greenlet>=3.0",
]
