tool.uv.package = true
# Keep this examples env on the same google-adk 1.x line as the ag_ui_adk package
# (its [tool.uv].constraint-dependencies isn't inherited by this separate uv project).
# ag_ui_adk now depends on a2ui-agent-sdk, which floors google-adk at >=1.28.1; without
# this cap uv would pull adk 2.x → google-genai 2.8, whose aiohttp readline(max_line_length=)
# call breaks live Gemini streaming. Pinning <2.0 keeps genai on 1.x (no aiohttp issue),
# matching the package's tested resolution.
tool.uv.constraint-dependencies = ["google-adk<2.0"]

[project]
name = "adk-middleware-examples"
version = "0.1.0"
description = "Example usage of the ADK middleware with FastAPI"
license = "MIT"

readme = "README.md"
requires-python = ">=3.10, <3.15"
dependencies = [
    "fastapi>=0.104.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "ag_ui_adk",
    "google-adk>=1.23.0",
]

[project.scripts]
dev = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
ag_ui_adk = { path = "../", editable = true }
